# pydbfntx

./: .gitignore  README.md  pyproject.toml
gera_dbf/: CASADO_IDX.ntx  IDADE_IDX.ntx  NASC_IDX.ntx  NOME_IDX.ntx  PESSOAS.dbf
pydbfntx/: __init__.py  dbf.py  ntx.py  table.py
tests/: conftest.py  create_fixtures.py  test_clipper_compat.py  test_clipper_nav.py  test_dbf.py  test_ntx.py  test_table.py
tests/fixtures/: clientes.dbf  dtmodif.ntx  nome.ntx
